# daily_report_cli

./: .gitmodules  CMakeLists.txt  Makefile
app/: CMakeLists.txt  main.cpp  main_y.cpp
cmake/: AddGitSubmodule.cmake
input/: CMakeLists.txt  config.h.in  report.json  report.yaml
src/: CMakeLists.txt  WorkRecord.cpp
src/include/: CMakeLists.txt  WorkRecord.h
